# faiss-metal

./: .gitignore  CMakeLists.txt  README.md  devenv.nix
include/faiss-metal/: MetalDeviceCapabilities.h  MetalIndexFlat.h  MetalResources.h  StandardMetalResources.h  faiss_metal.h
shaders/: GemmParams.h  block_select.metal  broadcast_sum.metal  fused_l2_topk.metal  l2_norm.metal  l2_norm_f16.metal  simdgroup_gemm.metal  simdgroup_gemm_bf16.metal  simdgroup_gemm_family9.metal  warp_select.metal
src/: MetalContext.h  MetalContext.mm  MetalDeviceCapabilities.mm  MetalDistance.h  MetalDistance.mm  MetalIndexFlat.mm  MetalL2Norm.h  MetalL2Norm.mm  MetalResources.mm  MetalSelect.h  MetalSelect.mm  MetalTensor.h  StandardMetalResources.mm
tests/: bench_metal_flat.mm  test_metal_distance.mm  test_metal_flat.mm
